test/corpus/attributes.txt
===============================================
single global attribute
===============================================

netcdf basic {
    float :attr = 1.0;
}

---

(dataset
  (dataset_id)
  (attribute
    type: (typeref
      (type))
    name: (identifier)
    (data_list
      (value
        (float)))))

===============================================
single global attribute before types
===============================================

netcdf basic {
    int :attr = 1;

    types:
}

---

(dataset
  (dataset_id)
  (attribute
    type: (typeref
      (type))
    name: (identifier)
    (data_list
      (value
        (integer))))
  (types_section))

===============================================
single global attribute after data
:error
===============================================

netcdf basic {
    data:

    float :attr = 2.0;
}

---



===============================================
single global attribute after group
===============================================

netcdf basic {
    data:

    group: grp {}

    float :attr = 2.0;
}

---

(dataset
  (dataset_id)
  (data_section)
  (group
    (identifier))
  (attribute
    (typeref
      (type))
    (identifier)
    (data_list
      (value
        (float)))))

===============================================
single variable attribute
===============================================

netcdf basic {
    variables:
        float a ;
        float a:attr = 1;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (typeref
        (type))
      (variable
        name: (identifier)))
    (attribute
      type: (typeref
        (type))
      variable: (identifier)
      name: (identifier)
      (data_list
        (value
          (integer))))))

===============================================
single variable attribute multiple values
===============================================

netcdf basic {
    variables:
        float a ;
        float a:range = 1.0, 5.0;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (typeref
        (type))
      (variable
        name: (identifier)))
    (attribute
      type: (typeref
        (type))
      variable: (identifier)
      name: (identifier)
      (data_list
        (value
          (float))
        (value
          (float))))))

===============================================
single variable (char) attribute no values
===============================================

netcdf basic {
    variables:
        float a ;
        char a:no_char = ;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (typeref
        (type))
      (variable
        name: (identifier)))
    (attribute
      type: (typeref
        (type))
      variable: (identifier)
      name: (identifier))))

===============================================
single variable attribute datalist
===============================================

netcdf basic {
    variables:
        float a ;
        my_type a:cmpd = {1, 2.0, "Three"};
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (typeref
        (type))
      (variable
        name: (identifier)))
    (attribute
      type: (typeref
        (derived_type
          (path
            (identifier))))
      variable: (identifier)
      name: (identifier)
      (data_list
        (data_list
          (value
            (integer))
          (value
            (float))
          (value
            (string)))))))

===============================================
single variable attribute nested datalist
===============================================

netcdf basic {
    variables:
        float a ;
        my_type a:cmpd = {1, {2.1, 2.2}, "Three"};
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (typeref
        (type))
      (variable
        name: (identifier)))
    (attribute
      type: (typeref
        (derived_type
          (path
            (identifier))))
      variable: (identifier)
      name: (identifier)
      (data_list
        (data_list
          (value
            (integer))
          (data_list
            (value
              (float))
            (value
              (float)))
          (value
            (string)))))))

===============================================
single untyped variable attribute -- known ambiguity treated as typed global attribute
===============================================

netcdf basic {
    variables:
        float a ;
        a:attr = 1;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (typeref
        (type))
      (variable
        name: (identifier)))
    (attribute
      type: (typeref
        (derived_type
          (path
            (identifier))))
      name: (identifier)
      (data_list
        (value
          (integer))))))

===============================================
single primitive typed global attribute in types
===============================================

netcdf basic {
    types:
        int :attr = 1;
}

---

(dataset
  (dataset_id)
  (types_section
    (attribute
      type: (typeref
        (type))
      name: (identifier)
      (data_list
        (value
          (integer))))))

===============================================
single derived typed global attribute in variables
===============================================

netcdf basic {
    types:
        my_type :asdf = 12;
}

---

(dataset
  (dataset_id)
  (types_section
    (attribute
      type: (typeref
        (derived_type
          (path
            (identifier))))
      name: (identifier)
      (data_list
        (value
          (integer))))))

===============================================
single global attribute (untyped) in variables
===============================================

netcdf basic {
    types:
        :attr = 1;
}

---

(dataset
  (dataset_id)
  (types_section
    (attribute
      name: (identifier)
      (data_list
        (value
          (integer))))))

===============================================
single primitive typed global attribute in variables
===============================================

netcdf basic {
    variables:
        int :attr = 1;
}

---

(dataset
  (dataset_id)
  (variables_section
    (attribute
      type: (typeref
        (type))
      name: (identifier)
      (data_list
        (value
          (integer))))))

===============================================
single derived typed global attribute in variables
===============================================

netcdf basic {
    variables:
        my_type :asdf = 12;
}

---

(dataset
  (dataset_id)
  (variables_section
    (attribute
      type: (typeref
        (derived_type
          (path
            (identifier))))
      name: (identifier)
      (data_list
        (value
          (integer))))))

===============================================
single global attribute (untyped) in variables
===============================================

netcdf basic {
    variables:
        :attr = 1;
}

---

(dataset
  (dataset_id)
  (variables_section
    (attribute
      name: (identifier)
      (data_list
        (value
          (integer))))))

===============================================
single primitive typed global attribute in dimensions
===============================================

netcdf basic {
    dimensions:
        a = 1;
        int :attr = 1;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (const_positive_int))))
    (attribute
      type: (typeref
        (type))
      name: (identifier)
      (data_list
        (value
          (integer))))))

===============================================
single derived typed global attribute in dimensions
===============================================

netcdf basic {
    dimensions:
        a = 1;
        my_type :asdf = 12;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (const_positive_int))))
    (attribute
      type: (typeref
        (derived_type
          (path
            (identifier))))
      name: (identifier)
      (data_list
        (value
          (integer))))))

===============================================
single global attribute (untyped) in dimensions
===============================================

netcdf basic {
    dimensions:
        a = 1;
        :attr = 1;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (const_positive_int))))
    (attribute
      name: (identifier)
      (data_list
        (value
          (integer))))))
